[package]
name = "triomphe"
version = "0.1.6"
authors = ["The Servo Project Developers"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Manishearth/triomphe"
description = "A fork of std::sync::Arc with some extra functionality and without weak references (originally servo_arc)"
keywords = ["arc", "ffi", "sync", "data-structure"]
categories = ["concurrency", "data-structures"]

[features]
std = []
default = ["serde", "stable_deref_trait", "std"]

[dependencies]
serde = { version = "1.0", default-features = false, optional = true }
stable_deref_trait = { version = "1.1.1", default-features = false, optional = true }
unsize = { version = "1.1", optional = true }
arc-swap = { version = "1.3.0", optional = true }
